--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -78,7 +78,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.18 ('pyvista_py3.9_pip': conda)",
+   "display_name": "webscrape",
    "language": "python",
    "name": "python3"
   },
@@ -92,12 +92,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.13.1 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 16:29:23) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9fea4bef1fedbb6a52485b1a0bf42cd990380afa5acc969734b9c2652729828f"
+    "hash": "990ed60edf11aaab39fefb273dc842f98afbbe578aee5e50ba2c520deace404d"
    }
   }
  },
