--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -2,52 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psutil\n",
+    "import numpy as np\n",
+    "from data.rosette_temp import Rosette\n",
+    "import pandas as pd\n",
+    "from multiprocess import Pool, get_context\n",
+    "from itertools import product\n",
+    "import os\n",
+    "import pyvista as pv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test #1: single rosette"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8503b1ab67054dd38befaddbce52a2b9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:62257/index.html?ui=P_0x30fc2c9b0_8&reconnect=auto\" class=\"pyvista…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = 0.5\n",
+    "c = 1.0\n",
+    "r0 = 1.0\n",
+    "h0 = 0.25\n",
+    "hp = 0.25\n",
+    "n_arms = 5\n",
+    "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
+    "ros.unify_mesh()\n",
+    "pl = ros.plot()\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/jko/ice3dtest/notebooks\n"
+      "10.730433653341958\n"
      ]
     }
    ],
    "source": [
-    "!pwd"
+    "# calculate volume\n",
+    "v_ros = ros.volume\n",
+    "print(v_ros)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pyvista as pv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'helper'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# sys.path.append('/home/jko/ice3dtest')\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdata\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m rosette\n",
-      "File \u001b[0;32m~/ice3d/data/rosette.py:6\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mtrame\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmath\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mhelper\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mcopy\u001b[39;00m \u001b[39mimport\u001b[39;00m deepcopy\n\u001b[1;32m      8\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mminiball\u001b[39;00m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'helper'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'c': array([-2.95547695e-08, -5.55111512e-17, -5.77497894e-08]), 'r': np.float64(3.041381354288414), 'v': np.float64(117.84230984687372)}\n"
      ]
     }
    ],
    "source": [
-    "import sys\n",
-    "# sys.path.append('/home/jko/ice3dtest')\n",
-    "from data import rosette"
+    "# calculate minimally bounding sphere\n",
+    "mbs = ros.calc_mbs()\n",
+    "print(mbs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09105756385194133\n"
+     ]
+    }
+   ],
+   "source": [
+    "# calculate effective density \n",
+    "rho_eff = v_ros / mbs['v']\n",
+    "print(rho_eff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7ef707bd81c84d569df6c7b49f05eef3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:62257/index.html?ui=P_0x336e7be30_9&reconnect=auto\" class=\"pyvista…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# visualize mbs\n",
+    "pl = ros.plot()\n",
+    "# create sphere with radius r using pyvista\n",
+    "sphere = pv.Sphere(radius=mbs['r'], center=mbs['c'])\n",
+    "# plot sphere with pyvista\n",
+    "pl.add_mesh(sphere, color='red', opacity=0.5)\n",
+    "pl.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test #2: test m"
    ]
   },
   {
@@ -55,11 +155,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import sys\n",
-    "for path in sys.path:\n",
-    "    print(repr(path))"
+    "# Test #2: multiple rosettes, single cpu"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Test #3: multiple rosettes, multiple cpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -78,7 +216,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "webscrape",
+   "display_name": "pyvista",
    "language": "python",
    "name": "python3"
   },
@@ -92,14 +230,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.1 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 16:29:23) [GCC 11.2.0]"
+   "version": "3.12.7"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "990ed60edf11aaab39fefb273dc842f98afbbe578aee5e50ba2c520deace404d"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
