--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -13,7 +13,8 @@
     "from multiprocess import Pool, get_context\n",
     "from itertools import product\n",
     "import os\n",
-    "import pyvista as pv"
+    "import pyvista as pv\n",
+    "import random"
    ]
   },
   {
@@ -25,50 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8503b1ab67054dd38befaddbce52a2b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62257/index.html?ui=P_0x30fc2c9b0_8&reconnect=auto\" class=\"pyvista…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "a = 0.5\n",
-    "c = 1.0\n",
-    "r0 = 1.0\n",
-    "h0 = 0.25\n",
-    "hp = 0.25\n",
-    "n_arms = 5\n",
-    "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
-    "ros.unify_mesh()\n",
-    "pl = ros.plot()\n",
-    "pl.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10.730433653341958\n"
+      "10 30 8.41 2.1025 8.41 5\n"
      ]
     }
    ],
+   "source": [
+    "a = 10\n",
+    "c = 30\n",
+    "f_r0 = random.uniform(0.75, 1.25)\n",
+    "# r0 = round(f_r0 * a, 2)\n",
+    "r0 = 8.41\n",
+    "hp = r0\n",
+    "h0 = hp/4\n",
+    "n_arms = 5\n",
+    "print(a, c, r0, h0, hp, n_arms)\n",
+    "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
+    "ros.unify_mesh()\n",
+    "pl = ros.plot(op=0.95)\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# calculate volume\n",
     "v_ros = ros.volume\n",
@@ -77,17 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'c': array([-2.95547695e-08, -5.55111512e-17, -5.77497894e-08]), 'r': np.float64(3.041381354288414), 'v': np.float64(117.84230984687372)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate minimally bounding sphere\n",
     "mbs = ros.calc_mbs()\n",
@@ -96,17 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.09105756385194133\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate effective density \n",
     "rho_eff = v_ros / mbs['v']\n",
@@ -115,24 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ef707bd81c84d569df6c7b49f05eef3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:62257/index.html?ui=P_0x336e7be30_9&reconnect=auto\" class=\"pyvista…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# visualize mbs\n",
     "pl = ros.plot()\n",
