--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -26,14 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 10\n",
+    "c = 30\n",
+    "f_r0 = random.uniform(0.75, 1.25)\n",
+    "r0 = f_r0 * a\n",
+    "type(r0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10 30 8.41 2.1025 8.41 5\n"
+      "10 30 8.41 2.1025 8.41 5\n",
+      "<class 'float'>\n",
+      "[6.9137032e+01 6.9137032e+01 1.3066296e+01 1.3066297e+01 6.9137032e+01\n",
+      " 1.3066297e+01 6.9137032e+01 1.3066296e+01 6.9137032e+01 1.3066297e+01\n",
+      " 6.9137032e+01 1.3066297e+01 1.3066297e+01 7.6293944e-08 1.3066296e+01\n",
+      " 1.3066297e+01 1.3066296e+01 1.3066297e+01 1.3066297e+01]\n"
      ]
     }
    ],
@@ -41,16 +59,17 @@
     "a = 10\n",
     "c = 30\n",
     "f_r0 = random.uniform(0.75, 1.25)\n",
-    "# r0 = round(f_r0 * a, 2)\n",
+    "# r0 = float(f_r0 * a)\n",
     "r0 = 8.41\n",
     "hp = r0\n",
     "h0 = hp/4\n",
     "n_arms = 5\n",
     "print(a, c, r0, h0, hp, n_arms)\n",
+    "print(type(r0))\n",
     "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
-    "ros.unify_mesh()\n",
-    "pl = ros.plot(op=0.95)\n",
-    "pl.show()"
+    "# ros.unify_mesh()\n",
+    "# pl = ros.plot(op=0.95)\n",
+    "# pl.show()"
    ]
   },
   {
