--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,63 +49,150 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = 10\n",
-    "c = 30\n",
-    "r0 = 8.41\n",
-    "hp = r0\n",
-    "h0 = hp/4\n",
-    "n_arms = 5\n",
-    "ros = Rosette(a, c, r0, h0, hp, n_arms)"
+    "import math\n",
+    "def round_up_to_decimal(number, decimals=0):\n",
+    "    \"\"\"Rounds a number up to the nearest specified decimal place.\n",
+    "\n",
+    "    Args:\n",
+    "        number: The number to round up.\n",
+    "        decimals: The number of decimal places to round to (default is 0).\n",
+    "\n",
+    "    Returns:\n",
+    "        The rounded-up number.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(decimals, int):\n",
+    "        raise TypeError(\"decimals must be an integer\")\n",
+    "    if decimals < 0:\n",
+    "        raise ValueError(\"decimals must be non-negative\")\n",
+    "    \n",
+    "    factor = 10 ** decimals\n",
+    "    return math.ceil(number * factor) / factor\n",
+    "\n",
+    "def round_down_to_decimal(number, decimals=0):\n",
+    "    \"\"\"Rounds a number down to the nearest specified decimal place.\n",
+    "\n",
+    "    Args:\n",
+    "        number: The number to round down.\n",
+    "        decimals: The number of decimal places to round to (default is 0).\n",
+    "\n",
+    "    Returns:\n",
+    "        The rounded-down number.\n",
+    "    \"\"\"\n",
+    "    if not isinstance(decimals, int):\n",
+    "        raise TypeError(\"decimals must be an integer\")\n",
+    "    if decimals < 0:\n",
+    "        raise ValueError(\"decimals must be non-negative\")\n",
+    "    \n",
+    "    factor = 10 ** decimals\n",
+    "    return math.floor(number * factor) / factor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10 30 9.994653568334764 2.498663392083691 9.994653568334764 7\n",
-      "<class 'float'>\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d895483b22b48ea981cbfa3825a614d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Widget(value='<iframe src=\"http://localhost:64653/index.html?ui=P_0x3ee32ed20_64&reconnect=auto\" class=\"pyvist…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# test with randomly varying sphere size\n",
-    "a = 10\n",
-    "c = 30\n",
-    "f_r0 = random.uniform(0.75, 1.0)\n",
-    "r0 = f_r0 * a\n",
-    "hp = r0\n",
-    "h0 = hp/4\n",
-    "n_arms = 7\n",
-    "print(a, c, r0, h0, hp, n_arms)\n",
-    "print(type(r0))\n",
-    "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
-    "ros.unify_mesh()\n",
-    "pl = ros.plot(op=0.95)\n",
-    "pl.show()"
+    "a, c, r0, h0, hp, n_arms = 54.26, 159.5, 43.98, 11.0, 43.98, 9\n",
+    "# ros = Rosette(a, c, r0, h0, hp, n_arms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output_path = '/Users/josephko/research/ice3d/output/out_log.txt'\n",
+    "for i in range(10):\n",
+    "    # test with randomly varying sphere size\n",
+    "    c = random.uniform(10, 200)\n",
+    "    c = round_up_to_decimal(c, 2)\n",
+    "    a_c_ratio = random.uniform(0.05, 0.8)\n",
+    "    a = c * a_c_ratio\n",
+    "    a = round_up_to_decimal(a, 2)\n",
+    "    f_r0 = random.uniform(0.75, 1.0)\n",
+    "    r0 = f_r0 * a\n",
+    "    r0 = round_up_to_decimal(r0, 2)\n",
+    "    hp = r0 # pyramid height\n",
+    "    f_h0 = random.uniform(0.2, 0.5)\n",
+    "    h0 = hp/4 # penetration depth\n",
+    "    h0 = round_up_to_decimal(h0, 2)\n",
+    "    n_arms = random.randint(4, 10)\n",
+    "    # print(a, c, r0, h0, hp, n_arms)\n",
+    "    # print(type(r0))\n",
+    "    file = open(output_path, 'a')\n",
+    "    file.write(f'{a}, {c}, {r0}, {h0}, {hp}, {n_arms}\\n')\n",
+    "    file.close()\n",
+    "    ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
+    "    # ros.unify_mesh()\n",
+    "    # pl = ros.plot(op=0.95)\n",
+    "    # pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# randomize bullets\n",
+    "scaling = [0.75, 1.25, 0.75, 1.25] \n",
+    "location = 15\n",
+    "ros_random = ros.randomize_bullets(scaling=scaling, location=location, inplace=False)\n",
+    "ros_random.unify_mesh()\n",
+    "ros_random.plot(op=0.95).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create multiblock object from rosette\n",
+    "ros.create_multiblock()\n",
+    "ros_mb = ros.block\n",
+    "ros_mb.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(ros_mb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# numer of blocks in multiblock \n",
+    "num_blocks = len(ros_mb)\n",
+    "print(num_blocks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# peform a boolean union of all the components of the multiblock object\n",
+    "ros_union = ros_mb[0]\n",
+    "num_blocks = len(ros_mb)\n",
+    "for i in range(1, num_blocks):\n",
+    "    ros_union = ros_union.boolean_union(ros_mb[i]).triangulate()\n",
+    "ros_union.plot(opacity=0.95, style='wireframe')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,14 +295,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create bullet arm\n",
-    "cyl = pv.Cylinder(center=cyl_center_rounded, direction=(0.0, 0.0, -1.0), \n",
-    "                radius=a, height=2*c, resolution=6, capping=True)\n",
-    "pyr = pv.Cone(center=pyr_center_rounded, direction=(0.0, 0.0, -1.0), \n",
+    "output_path = '/Users/josephko/research/ice3d/output/out_log.txt'\n",
+    "for i in range(10):\n",
+    "    c = random.uniform(10, 200)\n",
+    "    c = round_up_to_decimal(c, 2)\n",
+    "    a_c_ratio = random.uniform(0.05, 0.8)\n",
+    "    a = c * a_c_ratio\n",
+    "    a = round_up_to_decimal(a, 2)\n",
+    "    f_r0 = random.uniform(0.75, 1.0)\n",
+    "    r0 = f_r0 * a\n",
+    "    r0 = round_up_to_decimal(r0, 2)\n",
+    "    hp = r0 # pyramid height\n",
+    "    f_h0 = random.uniform(0.2, 0.5)\n",
+    "    h0 = hp/4 # penetration depth\n",
+    "    h0 = round_up_to_decimal(h0, 2)\n",
+    "    n_arms = random.randint(4, 10)\n",
+    "    # create bullet arm\n",
+    "    # cyl = pv.Cylinder(center=cyl_center_rounded, direction=(0.0, 0.0, -1.0), \n",
+    "    #                 radius=a, height=2*c, resolution=6, capping=True)\n",
+    "    # pyr = pv.Cone(center=pyr_center_rounded, direction=(0.0, 0.0, -1.0), \n",
+    "    #             height=hp, radius=a, capping=True, angle=None, resolution=6)\n",
+    "    cyl = pv.Cylinder(center=(0.0, 0.0, c+hp), direction=(0.0, 0.0, -1.0), \n",
+    "                    radius=a, height=2*c, resolution=6, capping=True)\n",
+    "    pyr = pv.Cone(center=(0.0, 0.0, hp/2), direction=(0.0, 0.0, -1.0), \n",
+    "                height=hp, radius=a, capping=True, angle=None, resolution=6)\n",
+    "    cyl = cyl.triangulate()\n",
+    "    pyr = pyr.triangulate()\n",
+    "    cyl_pts = cyl.points\n",
+    "    cyl_pts[abs(cyl_pts)<1e-10]=0.0 # replace small values with zeros\n",
+    "    cyl.points = cyl_pts\n",
+    "    pyr_pts = pyr.points\n",
+    "    pyr_pts[abs(pyr_pts)<1e-10]=0.0 # replace small values with zeros\n",
+    "    pyr.points = pyr_pts\n",
+    "    file = open(output_path, 'a')\n",
+    "    file.write(f'{a}, {c}, {hp}\\n')\n",
+    "    file.close()\n",
+    "    bullet = cyl.boolean_union(pyr).triangulate()\n",
+    "    # pt_dist = np.linalg.norm(bullet.points, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, c, hp = 38.61, 58.0, 35.2\n",
+    "cyl = pv.Cylinder(center=(0.0, 0.0, c+hp), direction=(0.0, 0.0, -1.0), \n",
+    "                    radius=a, height=2*c, resolution=6, capping=True)\n",
+    "pyr = pv.Cone(center=(0.0, 0.0, hp/2), direction=(0.0, 0.0, -1.0), \n",
     "            height=hp, radius=a, capping=True, angle=None, resolution=6)\n",
     "cyl = cyl.triangulate()\n",
     "pyr = pyr.triangulate()\n",
@@ -224,14 +356,12 @@
     "cyl.points = cyl_pts\n",
     "pyr_pts = pyr.points\n",
     "pyr_pts[abs(pyr_pts)<1e-10]=0.0 # replace small values with zeros\n",
-    "pyr.points = pyr_pts\n",
-    "# bullet = cyl.boolean_union(pyr).triangulate()\n",
-    "# pt_dist = np.linalg.norm(bullet.points, axis=1)"
+    "pyr.points = pyr_pts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,9 +382,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "06c682c5da7b4042b0a81a4d0eb857f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:51391/index.html?ui=P_0x306402e10_0&reconnect=auto\" class=\"pyvista…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# plot cyl and pyr with pyvista\n",
     "pl = pv.Plotter()\n",
