--- a/notebooks/01-test-rosette.ipynb
+++ b/notebooks/01-test-rosette.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,111 @@
    "metadata": {},
    "source": [
     "# Test #1: single rosette"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (a) generate single rosette with specified parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0625\n",
+      "0.25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ymin = 0.5\n",
+    "ymax = 1\n",
+    "xmin = 4\n",
+    "xmax = 12 \n",
+    "slope = (ymax-ymin)/(xmax-xmin)\n",
+    "print(slope)\n",
+    "intercept = 0.5 - (slope*4)\n",
+    "print(intercept)\n",
+    "n_arms = 4\n",
+    "r0 = slope*(n_arms) + intercept\n",
+    "r0 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "22d0fd12e0b54f448d645d9f3a0e8e70",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Widget(value='<iframe src=\"http://localhost:63022/index.html?ui=P_0x3773a9700_47&reconnect=auto\" class=\"pyvist…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "a = 20\n",
+    "c = a*3\n",
+    "n_arms = 4\n",
+    "r0 = a*0.5\n",
+    "h0 = r0/2\n",
+    "hp = a*1.0\n",
+    "ros = Rosette(a, c, r0, h0, hp, n_arms)\n",
+    "pl = ros.plot(op=1.0)\n",
+    "pl.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## (b) randomly generate N"
    ]
   },
   {
@@ -543,7 +648,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.2"
   },
   "orig_nbformat": 4
  },
