add spherical code

--- a/notebooks/09-demo-ros-cq.ipynb
+++ b/notebooks/09-demo-ros-cq.ipynb
@@ -52,7 +52,9 @@
   {
    "cell_type": "markdown",
    "id": "17b892bc-adb3-42bd-90e6-08b23577737d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# (2) Source Code"
    ]
@@ -328,14 +330,6 @@
     "print(f'rosette volume: {ros.val().Volume()}')\n",
     "ros"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6edaf10-73fa-491f-87fd-16372479ffb4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
