json dir clarification

--- a/notebooks/09-demo-ros-cq.ipynb
+++ b/notebooks/09-demo-ros-cq.ipynb
@@ -10,7 +10,9 @@
     "2) Make sure you are in the ice3d directory\n",
     "3) Activate conda module: `module load conda`\n",
     "4) Download required packages: `conda env create -f cq-conda-env.yaml -n cq`\n",
-    "5) Change the jupyter kernel to cq (or whatever you named it)"
+    "5) Change the jupyter kernel to cq (or whatever you named it)\n",
+    "\n",
+    "*NOTE: check file path for s_code.json"
    ]
   },
   {
@@ -44,7 +46,7 @@
    "source": [
     "# Read the JSON file as a dictionary\n",
     "# NOTE: when reading in from JSON, the key is read as a string\n",
-    "json_filepath = '/glade/u/home/joko/spherical-code/data/s_code.json'\n",
+    "json_filepath = '/glade/u/home/joko/ice3d/s_code.json' # change directory as needed\n",
     "with open(json_filepath, 'r') as json_file:\n",
     "    s_code_dict = json.load(json_file)"
    ]
