--- a/notebooks/09-demo-ros-cq.ipynb
+++ b/notebooks/09-demo-ros-cq.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "Instructions for running notebook (on NCAR jupyterhub):  \n",
-    "1) Pull from github: `git pull https://github.com/josephko91/ice3d.git`\n",
+    "1) Pull from github: `git clone https://github.com/josephko91/ice3d.git`\n",
     "2) Make sure you are in the ice3d directory\n",
     "3) Activate conda module: `module load conda`\n",
     "4) Download required packages: `conda env create -f cq-conda-env.yaml -n cq`\n",
@@ -55,7 +55,9 @@
   {
    "cell_type": "markdown",
    "id": "17b892bc-adb3-42bd-90e6-08b23577737d",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# (2) Source Code"
    ]
