test subset params

--- a/notebooks/08-gen-params.ipynb
+++ b/notebooks/08-gen-params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "id": "6afb15e1-9ca8-4c37-bc8b-45e4d0a85299",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,8 @@
     "import os\n",
     "import json\n",
     "import copy\n",
-    "import random"
+    "import random\n",
+    "import pickle"
    ]
   },
   {
@@ -377,7 +378,6 @@
    "outputs": [],
    "source": [
     "# save final parameter list\n",
-    "import pickle\n",
     "params_json = '/glade/u/home/joko/ice3d/output/params.json'\n",
     "params_pickle = '/glade/u/home/joko/ice3d/output/params.pkl'\n",
     "# save as json\n",
@@ -389,22 +389,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "7914d3ff-7eb3-4acb-941f-5bab818c448c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "params_json = '/glade/u/home/joko/ice3d/output/params.json'\n",
+    "params_pickle = '/glade/u/home/joko/ice3d/output/params.pkl'\n",
     "# read back params from json \n",
     "with open(params_json, 'rb') as file:\n",
-    "    json_test = json.load(file)\n",
+    "    params_json = json.load(file)\n",
     "# read back params from pkl\n",
     "with open(params_pickle, 'rb') as file:\n",
-    "    pkl_test = pickle.load(file)"
+    "    params_pickle = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "id": "6cc97a13-a7a1-48dd-88ee-95d2f6e4ec9c",
    "metadata": {},
    "outputs": [
@@ -414,140 +416,143 @@
        "70000"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(json_test)"
+    "len(params_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "7f9c6454-a14b-42b7-b012-87f5391ff5e8",
+   "execution_count": 8,
+   "id": "820babcc-e2ef-42a5-921e-784eb28031c0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[26.53121070857551,\n",
-       "  63.21278324652968,\n",
-       "  1.0836825592696984,\n",
-       "  0.9032904245911085,\n",
-       "  0.8901685367597103,\n",
-       "  4],\n",
-       " [0.8763302560032733,\n",
-       "  1.0531383801962657,\n",
-       "  0.9479569137595074,\n",
-       "  0.8395008445364098,\n",
-       "  0.9434541951270421,\n",
-       "  0.9217632083557027,\n",
-       "  0.9565622867601465,\n",
-       "  1.0925985207870723],\n",
-       " [-0.26874508612934517,\n",
-       "  0.9417069331058805,\n",
-       "  -0.20239597530990402,\n",
-       "  0.2065136855284929,\n",
-       "  0.8311269521861174,\n",
-       "  0.5163139423250683,\n",
-       "  -0.13312816988630846,\n",
-       "  -0.708562720058195,\n",
-       "  0.6929760184353092,\n",
-       "  0.5795252100590425,\n",
-       "  -0.5252818587867077,\n",
-       "  -0.6230806526731543]]"
+       "list"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "json_test[0]"
+    "type(params_json)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "0e63a6e4-ffd7-4e4e-95f6-3723ba6b2e86",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "70000"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(pkl_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "12c2159d-f686-46fc-b63b-e15854081ae9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[26.53121070857551,\n",
-       "  63.21278324652968,\n",
-       "  1.0836825592696984,\n",
-       "  0.9032904245911085,\n",
-       "  0.8901685367597103,\n",
-       "  4],\n",
-       " [0.8763302560032733,\n",
-       "  1.0531383801962657,\n",
-       "  0.9479569137595074,\n",
-       "  0.8395008445364098,\n",
-       "  0.9434541951270421,\n",
-       "  0.9217632083557027,\n",
-       "  0.9565622867601465,\n",
-       "  1.0925985207870723],\n",
-       " [np.float64(-0.26874508612934517),\n",
-       "  np.float64(0.9417069331058805),\n",
-       "  np.float64(-0.20239597530990402),\n",
-       "  np.float64(0.2065136855284929),\n",
-       "  np.float64(0.8311269521861174),\n",
-       "  np.float64(0.5163139423250683),\n",
-       "  np.float64(-0.13312816988630846),\n",
-       "  np.float64(-0.708562720058195),\n",
-       "  np.float64(0.6929760184353092),\n",
-       "  np.float64(0.5795252100590425),\n",
-       "  np.float64(-0.5252818587867077),\n",
-       "  np.float64(-0.6230806526731543)]]"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pkl_test[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4dbebeb3-a33b-4aba-a41a-38645079d72f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# create a smaller subset of param dataset\n",
+    "n_subset = 100\n",
+    "params_subset = random.sample(params_json, n_subset)\n",
+    "len(params_subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8b06bb4c-1a4f-4f44-913e-ca173c05e697",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[26.02279148051784,\n",
+       "  213.55186299935284,\n",
+       "  0.8442695147773375,\n",
+       "  1.028821630582775,\n",
+       "  1.0102830495076327,\n",
+       "  5],\n",
+       " [1.038901854865784,\n",
+       "  1.1789714833173268,\n",
+       "  0.9756765013975094,\n",
+       "  1.1490845251901942,\n",
+       "  0.8283362808966213,\n",
+       "  1.1445294839236153,\n",
+       "  0.9440780464966182,\n",
+       "  1.0820244606928615,\n",
+       "  0.9041287066516441,\n",
+       "  0.8776868773625491],\n",
+       " [0.27418131032542803,\n",
+       "  0.8934699692548581,\n",
+       "  0.35571902269622074,\n",
+       "  0.8766438913346803,\n",
+       "  -0.4578478435962639,\n",
+       "  -0.14788793020338176,\n",
+       "  -0.9066808619396093,\n",
+       "  -0.4206437402784707,\n",
+       "  0.031442938109943495,\n",
+       "  -0.3127744737397941,\n",
+       "  -0.4315413200274665,\n",
+       "  0.8461348696784377,\n",
+       "  0.3650236628370787,\n",
+       "  0.21471296306921922,\n",
+       "  -0.9059006949213798]]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_subset[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2663e294-80ce-407c-a00e-a3c3652207ca",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# save test subset of params\n",
+    "subset_path = '/glade/u/home/joko/ice3d/output/params_subset.json'\n",
+    "# save as json\n",
+    "with open(subset_path, 'w') as file:\n",
+    "    json.dump(params_subset, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bfa62958-8e1f-4f6d-8531-4033742cc806",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test read subset of params\n",
+    "subset_path = '/glade/u/home/joko/ice3d/output/params_subset.json'\n",
+    "# load saved json\n",
+    "with open(subset_path, 'rb') as file:\n",
+    "    params_json = json.load(file)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b06bb4c-1a4f-4f44-913e-ca173c05e697",
+   "id": "ea590468-5b91-4dc3-9152-2d5beb5bfa26",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -555,7 +560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2663e294-80ce-407c-a00e-a3c3652207ca",
+   "id": "ba39b00d-7bfd-4d3b-a6bc-c5df2d249add",
    "metadata": {},
    "outputs": [],
    "source": []
