--- a/notebooks/08-gen-params.ipynb
+++ b/notebooks/08-gen-params.ipynb
@@ -546,7 +546,7 @@
     "subset_path = '/glade/u/home/joko/ice3d/output/params_subset.json'\n",
     "# load saved json\n",
     "with open(subset_path, 'rb') as file:\n",
-    "    params_json = json.load(file)"
+    "    params_subset = json.load(file)"
    ]
   },
   {
