mesh tests with pyvista

--- a/notebooks/10-gen-from-param-list.ipynb
+++ b/notebooks/10-gen-from-param-list.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "markdown",
    "id": "a5387ab2-a53c-4b16-9009-d5face07cb4f",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# (1) Load inputs"
    ]
@@ -180,16 +182,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "id": "4f9e3992-4fe0-4f3f-8874-340b7af497f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# read test subset of params\n",
-    "params_path = '/glade/u/home/joko/ice3d/output/params_subset.json'\n",
+    "params_path = '/glade/u/home/joko/ice3d/output/params.json'\n",
     "# load saved json\n",
     "with open(params_path, 'rb') as file:\n",
-    "    params_subset = json.load(file)"
+    "    params = json.load(file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d73bece9-72ce-4feb-9484-6fd4e9ada7f0",
+   "metadata": {},
+   "source": [
+    "### (i) Check parameter distributions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "aae7826c-7eef-4f64-87dc-3dc5efb952b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[26.53121070857551, 63.21278324652968, 1.0836825592696984, 0.9032904245911085, 0.8901685367597103, 4], [0.8763302560032733, 1.0531383801962657, 0.9479569137595074, 0.8395008445364098, 0.9434541951270421, 0.9217632083557027, 0.9565622867601465, 1.0925985207870723], [-0.26874508612934517, 0.9417069331058805, -0.20239597530990402, 0.2065136855284929, 0.8311269521861174, 0.5163139423250683, -0.13312816988630846, -0.708562720058195, 0.6929760184353092, 0.5795252100590425, -0.5252818587867077, -0.6230806526731543]]\n",
+      "[[26.53121070857551, 63.21278324652968, 1.0836825592696984, 0.9032904245911085, 0.8901685367597103, 4], [1.0501020528441458, 1.0469427269525389, 1.13524689256309, 0.9412838497771356, 1.1739504190529217, 1.1715651889368413, 1.0331251799429826, 0.8616827592199455], [-0.3561160498714929, 0.8459990373091887, -0.3968211031382405, 0.6946156820932747, 0.7192810990137289, -0.011989778634190554, -0.36593170478168796, -0.5794542937551687, 0.7282353389422035, 0.5217732776935582, -0.830326628902919, -0.19573026342299527]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(params[0])\n",
+    "print(params[99])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "914d4695-0f43-4bd3-9829-6f4b11f7270a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_dists = {} # values of base parameters stored as dictionary\n",
+    "p_keys = ['a', 'c', 'f_r0','f_hp', 'f_h0']\n",
+    "# initialize dict\n",
+    "for j in range(len(p_keys)):\n",
+    "    param_dists[p_keys[j]] = []\n",
+    "for i in range(0, len(params), 100):\n",
+    "    p_set = params[i]\n",
+    "    vals = []\n",
+    "    for j in range(len(p_keys)):\n",
+    "        p = p_keys[j]\n",
+    "        v = p_set[0][j]\n",
+    "        param_dists[p].append(v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "d5c5ce26-6d47-40f8-b485-48fb2e24d416",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "700"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(param_dists['a'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8e42876-4f0e-4a6e-99c3-a14f729faa99",
+   "metadata": {},
+   "source": [
+    "Note: look at notebook 08 for 2-d cross sections of the LHS."
    ]
   },
   {
