test metadata generation

--- a/notebooks/08-gen-params.ipynb
+++ b/notebooks/08-gen-params.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "6afb15e1-9ca8-4c37-bc8b-45e4d0a85299",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "bfa62958-8e1f-4f6d-8531-4033742cc806",
    "metadata": {},
    "outputs": [],
@@ -479,11 +479,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ba39b00d-7bfd-4d3b-a6bc-c5df2d249add",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(params_subset)"
+   ]
   }
  ],
  "metadata": {
