add rho_eff and sa_eff calcs to script

--- a/notebooks/12-test-miniball-cq.ipynb
+++ b/notebooks/12-test-miniball-cq.ipynb
@@ -953,6 +953,7 @@
     "    mbs['c'] = c # center coordinates as np array\n",
     "    mbs['r'] = r # radius of sphere as float\n",
     "    mbs['v'] = (4/3)*np.pi*(r**3)\n",
+    "    mbs['a'] = 4*np.pi*(r**2) \n",
     "\n",
     "    return mbs\n",
     "mbs_unfiltered = calc_mbs(verts_list)\n",
