ros creation bug test

--- a/notebooks/14-fix-n6-bug.ipynb
+++ b/notebooks/14-fix-n6-bug.ipynb
@@ -35,7 +35,9 @@
   {
    "cell_type": "markdown",
    "id": "d6d711ef-89ab-4799-a564-9c9b208654ad",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Source Code"
    ]
