--- a/notebooks/24-projections-multiprocess.ipynb
+++ b/notebooks/24-projections-multiprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "caf6ba84-7902-40a3-8931-57c5f18ebf9d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0721b8c1-dff1-483e-a5e9-a0f03f766776",
    "metadata": {},
    "outputs": [],
@@ -105,36 +105,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "222dcf3b-9641-42b5-a451-0ac23d692e29",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%time\n",
-    "# 1 core (serial)\n",
-    "def main():\n",
-    "    save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
-    "    os.makedirs(save_dir, exist_ok=True)\n",
-    "    # Load the JSON file\n",
-    "    params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
-    "    with open(params_path, 'rb') as file:\n",
-    "        params = json.load(file)\n",
-    "    # load list of STL filepaths\n",
-    "    stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
-    "    with open(stl_paths_txt, 'r') as file:\n",
-    "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
-    "        rel_paths = [line.strip().replace('./','') for line in file]\n",
-    "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
-    "    n_samples = 10\n",
-    "    n_proj = 100\n",
-    "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
-    "    num_cores = 1 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
-    "    process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
-    "    # Use a multiprocessing Pool to process the STL files in parallel\n",
-    "    with multiprocessing.Pool(processes=num_cores) as pool:\n",
-    "        pool.map(process_stl_params, stl_paths)\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "# %%time\n",
+    "# # 1 core (serial)\n",
+    "# def main():\n",
+    "#     save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
+    "#     os.makedirs(save_dir, exist_ok=True)\n",
+    "#     # Load the JSON file\n",
+    "#     params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "#     with open(params_path, 'rb') as file:\n",
+    "#         params = json.load(file)\n",
+    "#     # load list of STL filepaths\n",
+    "#     stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
+    "#     with open(stl_paths_txt, 'r') as file:\n",
+    "#         basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
+    "#         rel_paths = [line.strip().replace('./','') for line in file]\n",
+    "#         stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
+    "#     n_samples = 100\n",
+    "#     n_proj = 100\n",
+    "#     stl_paths = stl_paths[:n_samples] # subset if needed\n",
+    "#     num_cores = 1 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
+    "#     process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
+    "#     # Use a multiprocessing Pool to process the STL files in parallel\n",
+    "#     with multiprocessing.Pool(processes=num_cores) as pool:\n",
+    "#         pool.map(process_stl_params, stl_paths)\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     main()"
    ]
   },
   {
@@ -149,78 +149,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "36003703-ba5b-4395-839e-caf51e0cacd1",
+   "execution_count": 4,
+   "id": "db21ff90-62c4-4696-a217-2d48a8ab8cb6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 1.16 s, sys: 149 ms, total: 1.31 s\n",
+      "Wall time: 1.41 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/9/ros-test-054702.stl'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%time\n",
-    "# 2 cores\n",
-    "def main():\n",
-    "    save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
-    "    os.makedirs(save_dir, exist_ok=True)\n",
-    "    # Load the JSON file\n",
-    "    params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
-    "    with open(params_path, 'rb') as file:\n",
-    "        params = json.load(file)\n",
-    "    # load list of STL filepaths\n",
-    "    stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
-    "    with open(stl_paths_txt, 'r') as file:\n",
-    "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
-    "        rel_paths = [line.strip().replace('./','') for line in file]\n",
-    "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
-    "    n_samples = 10\n",
-    "    n_proj = 100\n",
-    "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
-    "    num_cores = 2 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
-    "    process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
-    "    # Use a multiprocessing Pool to process the STL files in parallel\n",
-    "    with multiprocessing.Pool(processes=num_cores) as pool:\n",
-    "        pool.map(process_stl_params, stl_paths)\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "# Load the JSON file\n",
+    "params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "with open(params_path, 'rb') as file:\n",
+    "    params = json.load(file)\n",
+    "# load list of STL filepaths\n",
+    "stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
+    "with open(stl_paths_txt, 'r') as file:\n",
+    "    basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
+    "    rel_paths = [line.strip().replace('./','') for line in file]\n",
+    "    stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
+    "stl_paths[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "82261fb7-6a37-41f3-bba9-490823f546b1",
+   "execution_count": 6,
+   "id": "1e5ff432-fc6b-425d-a1bf-fb851180db2f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70000"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "%%time\n",
-    "# 4 cores\n",
-    "def main():\n",
-    "    save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
-    "    os.makedirs(save_dir, exist_ok=True)\n",
-    "    # Load the JSON file\n",
-    "    params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
-    "    with open(params_path, 'rb') as file:\n",
-    "        params = json.load(file)\n",
-    "    # load list of STL filepaths\n",
-    "    stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
-    "    with open(stl_paths_txt, 'r') as file:\n",
-    "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
-    "        rel_paths = [line.strip().replace('./','') for line in file]\n",
-    "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
-    "    n_samples = 10\n",
-    "    n_proj = 100\n",
-    "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
-    "    num_cores = 4 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
-    "    process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
-    "    # Use a multiprocessing Pool to process the STL files in parallel\n",
-    "    with multiprocessing.Pool(processes=num_cores) as pool:\n",
-    "        pool.map(process_stl_params, stl_paths)\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()"
+    "len(params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "bb25e3f7-bd9e-4569-aec7-9be9c73f37a1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 729 ms, sys: 207 ms, total: 936 ms\n",
+      "Wall time: 2min 42s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# 8 cores\n",
@@ -237,7 +239,7 @@
     "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
     "        rel_paths = [line.strip().replace('./','') for line in file]\n",
     "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
-    "    n_samples = 10\n",
+    "    n_samples = 100\n",
     "    n_proj = 100\n",
     "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
     "    num_cores = 8 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
@@ -251,10 +253,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8234a300-39a9-4b54-9681-154bd9ad3831",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 724 ms, sys: 174 ms, total: 898 ms\n",
+      "Wall time: 1min 46s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "# 16 cores\n",
@@ -271,7 +282,7 @@
     "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
     "        rel_paths = [line.strip().replace('./','') for line in file]\n",
     "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
-    "    n_samples = 10\n",
+    "    n_samples = 100\n",
     "    n_proj = 100\n",
     "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
     "    num_cores = 16 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
@@ -285,19 +296,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "22f7e4aa-a27a-4e37-853a-b17b4fda572a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 840 ms, sys: 232 ms, total: 1.07 s\n",
+      "Wall time: 1min 38s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# 32 cores\n",
+    "def main():\n",
+    "    save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    # Load the JSON file\n",
+    "    params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "    with open(params_path, 'rb') as file:\n",
+    "        params = json.load(file)\n",
+    "    # load list of STL filepaths\n",
+    "    stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
+    "    with open(stl_paths_txt, 'r') as file:\n",
+    "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
+    "        rel_paths = [line.strip().replace('./','') for line in file]\n",
+    "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
+    "    n_samples = 100\n",
+    "    n_proj = 100\n",
+    "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
+    "    num_cores = 32 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
+    "    process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
+    "    # Use a multiprocessing Pool to process the STL files in parallel\n",
+    "    with multiprocessing.Pool(processes=num_cores) as pool:\n",
+    "        pool.map(process_stl_params, stl_paths)\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "62c30a77-8e9d-4d11-9884-984b2ceb1e29",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 842 ms, sys: 299 ms, total: 1.14 s\n",
+      "Wall time: 1min 25s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# 64 cores\n",
+    "def main():\n",
+    "    save_dir = '/glade/derecho/scratch/joko/synth-ros/test-mp'\n",
+    "    os.makedirs(save_dir, exist_ok=True)\n",
+    "    # Load the JSON file\n",
+    "    params_path = '/glade/u/home/joko/ice3d/output/params_200_50.json'\n",
+    "    with open(params_path, 'rb') as file:\n",
+    "        params = json.load(file)\n",
+    "    # load list of STL filepaths\n",
+    "    stl_paths_txt = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl/stl_relative_paths.txt'\n",
+    "    with open(stl_paths_txt, 'r') as file:\n",
+    "        basepath = '/glade/derecho/scratch/joko/synth-ros/params_200_50_20250403/stl'\n",
+    "        rel_paths = [line.strip().replace('./','') for line in file]\n",
+    "        stl_paths = [os.path.join(basepath, i) for i in rel_paths]\n",
+    "    n_samples = 100\n",
+    "    n_proj = 100\n",
+    "    stl_paths = stl_paths[:n_samples] # subset if needed\n",
+    "    num_cores = 64 # set number of CPU cores e.g., multiprocessing.cpu_count()\n",
+    "    process_stl_params = partial(process_stl, save_dir=save_dir, n_proj=n_proj)\n",
+    "    # Use a multiprocessing Pool to process the STL files in parallel\n",
+    "    with multiprocessing.Pool(processes=num_cores) as pool:\n",
+    "        pool.map(process_stl_params, stl_paths)\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
   },
   {
    "cell_type": "code",
